@@ -117,7 +117,10 @@ and <b>abort</b> execution and transaction and fail task.</p>
 </tr>
 <tr>
   <td width="12%" valign="top">output</td>
-  <td width="78%" valign="top">Output file for result sets (defaults to System.out)</td>
+  <td width="78%" valign="top">Output file for result sets (defaults to System.out)
+    <b>Since Ant 1.8</b> can specify any Resource that supports output (see
+    <a href="../develop.html#set-magic">note</a>).
+  </td>
   <td width="10%" valign="top">No (print to System.out by default)</td>
 </tr>
   <tr>
